second published version

--- a/source/assets/sass/components/_module.scss
+++ b/source/assets/sass/components/_module.scss
@@ -1,9 +1,5 @@
-
 @import "button_orange";
 @import "popup";
 @import "testimonials-carausel";
 @import "projects-carausel";
-// @import "cnopa";
-
-
-
+@import "popup_goodbye";
