--- a/source/assets/sass/layout/_screen-advantages.scss
+++ b/source/assets/sass/layout/_screen-advantages.scss
@@ -70,3 +70,24 @@
         }
     }
 }
+
+@media(max-width:1199px){
+    
+}
+@media(max-width:991px){
+    
+}
+@media(max-width:767px){
+    .screen-advantages h3{
+        margin-top: 0;
+        font-size: 36px;
+        line-height: 1;
+        margin-bottom: 10px;
+    }
+}
+@media(max-width:560px){
+    
+}
+@media(max-width:480px){
+    
+}
