--- a/source/assets/sass/layout/_screen-projects.scss
+++ b/source/assets/sass/layout/_screen-projects.scss
@@ -19,3 +19,10 @@
         margin-bottom: 40px;
     }
 }
+
+@media (max-width: 767px){
+    .screen-projects h3{
+        font-size: 36px;
+    }
+}
+
