--- a/source/assets/sass/layout/_screen1.scss
+++ b/source/assets/sass/layout/_screen1.scss
@@ -144,6 +144,11 @@
         font-size: 32px;
         line-height: 1;
     }
+
+    .screen1 .container .row .screen1__leftBar ul li{
+        line-height: 1;
+        margin-bottom: 7px;
+    }
 }
 @media(max-width:480px){
     
