--- a/source/assets/sass/components/_popup_goodbye.scss
+++ b/source/assets/sass/components/_popup_goodbye.scss
@@ -20,6 +20,7 @@
         align-items: center;
         justify-content: center;
         padding: 30px 0 30px 0;
+        margin: 15px;
 
         p {
             text-align: center;
