--- a/source/assets/sass/components/_button_orange.scss
+++ b/source/assets/sass/components/_button_orange.scss
@@ -7,9 +7,16 @@
     justify-content: center;
     color: #ffffff;
     font-size: 18px;
+    cursor: pointer;
     font-weight: 700;
     border: none;
     outline: none;
+}
+.btn-showmore{
+    height: 40px;
+    background: #ffa700;
+    margin: auto;
+    width: 270px;
 }
 .cnopa{
     position: fixed;
