--- a/source/assets/sass/layout/_screen2.scss
+++ b/source/assets/sass/layout/_screen2.scss
@@ -45,7 +45,7 @@
                 justify-content: center;
 
                 img{
-                    width: 100%;
+                    // width: 100%;
                     max-width: 170px;
                     height: 100%;
                 }
