--- a/source/assets/sass/layout/_screen5.scss
+++ b/source/assets/sass/layout/_screen5.scss
@@ -44,6 +44,7 @@
                 border-radius: 5px;
                 padding: 38px;
                 box-sizing: border-box;
+                width: 100%;
 
                 p{
                     font-size: 18px;
@@ -64,9 +65,10 @@
                 }
 
                 .topIput{
+                    //border:1px solid red;
                     display: flex;
-                    justify-content: space-between;
-                    align-items: center;
+                    flex-direction: column;
+                    align-items: flex-start;
                     margin-bottom: 16px;
 
                     label{
@@ -76,15 +78,35 @@
                         color: rgb(61, 61, 61);          
                         margin-right:10px; 
                     }
-                    
-                    input{
-                        
-                        padding-left: 15px;
-                        height: 50px;
+
+                    .select, input{
+                        width: 100%;
+                        height: 40px;
                         border-radius: 5px;
                         box-shadow: 0px 2px 6.3px 0.7px rgba(0, 0, 0, 0.2);
-                        border:none;
+                        outline: none;
+                        border: none;
+                        cursor: pointer;
+                        margin-bottom: 15px;
+                        padding-left: 15px;
+                        
                     }
+
+                    input{
+                        border:none;
+                        
+                    }
+
+                    textarea{
+                        width: 100%;
+                        box-shadow: 0px 2px 6.3px 0.7px rgba(0, 0, 0, 0.2);
+                        border-radius: 5px;
+                        height: 80px;
+                        border:none;
+                        outline: none;
+                        margin-bottom:20px;
+                    }
+                 
                     
                 }
                 .bottomRadio{
