added consultation popup

--- a/source/assets/sass/libs.scss
+++ b/source/assets/sass/libs.scss
@@ -5,4 +5,4 @@
 
 // @import "../libs/bootstrap3/css/bootstrap.min";
 
-//@import "../libs/Magnific-Popup-master/dist/magnific-popup";
+@import "../libs/Magnific-Popup-master/dist/magnific-popup";
