--- a/source/assets/sass/components/_module.scss
+++ b/source/assets/sass/components/_module.scss
@@ -6,3 +6,6 @@
 @import "item";
 @import "itemPopup";
 @import "callback";
+@import "popup-multiscreen";
+@import "popup-getfaq";
+@import "popup-calcresult";
