--- a/source/assets/sass/components/_ItemPopup.scss
+++ b/source/assets/sass/components/_ItemPopup.scss
@@ -14,6 +14,7 @@
     opacity: 0;
     pointer-events: none;
     transition: opacity 300ms;
+    z-index: 3;
     
     .ItemPopup__card{
         transform: scale(0);
