--- a/source/assets/sass/components/_button_orange.scss
+++ b/source/assets/sass/components/_button_orange.scss
@@ -11,6 +11,10 @@
     font-weight: 700;
     border: none;
     outline: none;
+
+    &:hover{
+        color: white;
+    }
 }
 .btn-showmore{
     height: 40px;
@@ -21,7 +25,7 @@
 .cnopa{
     position: fixed;
     bottom:20px;
-    right:20px;
+    left:20px;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -43,4 +47,15 @@
     }
 
     
+}
+
+.styled-input{
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 6.3px 0.7px rgba(0, 0, 0, 0.2);
+    outline: none;
+    border: none;
+    cursor: pointer;
+    padding-left: 15px;
 }
