--- a/source/assets/sass/layout/_screen2.scss
+++ b/source/assets/sass/layout/_screen2.scss
@@ -46,7 +46,7 @@
 
                 img{
                     // width: 100%;
-                    max-width: 170px;
+                    max-width: 100%;
                     height: 100%;
                 }
             }
