--- a/source/assets/sass/layout/_screen3.scss
+++ b/source/assets/sass/layout/_screen3.scss
@@ -7,11 +7,23 @@
     // background-color: #917e6d;
     // z-index: -2;
     
+    .overlay{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        background: rgba(0, 0, 0, 0.4);
+    }
+    .container{
+        position: relative;
+        z-index: 1;
+    }
 
     img{
         position: absolute;
         object-fit: cover;
-        height: 105%;
+        height: 100%;
+        width: 100%;
         left: 0;
         top:0;
         z-index: -1;
