save-point before new implementation

--- a/source/assets/sass/components/_ItemPopup.scss
+++ b/source/assets/sass/components/_ItemPopup.scss
@@ -78,7 +78,9 @@
                 }
             }
         }
-
+        .green-span{
+            color: rgb(2, 160, 2);
+        }
         .Title{
             font-size: 18px;
             padding-left: 20px;
