--- a/source/assets/sass/components/_item.scss
+++ b/source/assets/sass/components/_item.scss
@@ -2,13 +2,16 @@
     height: 430px;
     padding: 15px;
     display: flex;
+    position: relative;
     flex-direction: column;
     justify-content: space-between;
     box-shadow: 0px 4px 14.4px 1.6px rgba(0, 0, 0, 0.14);
     border-radius: 5px;
    // border:1px solid red;
 
-
+    &__marker{
+        right: 15px;
+    }
     .wrapImg{
         height: 50%;
         overflow: hidden;
@@ -60,7 +63,7 @@
                 color: rgb(241, 86, 35);
             }
         }
-        button{
+        a{
             width: 100%;
             border-radius: 5px;
             background-color: rgb(241, 86, 35);
