--- a/source/assets/sass/components/_popup.scss
+++ b/source/assets/sass/components/_popup.scss
@@ -4,6 +4,7 @@
     position: fixed;
     display: flex;
     width: 100%;
+    z-index: 10;
     height: 100%;
     background-color:rgba(0,0,0,0.5);
     top:0;
